--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your HTML Page</title>
+</head>
+<body>
+
+<!-- Your existing HTML content goes here -->
+
+<!-- Add the <a> tag for Flatiron School -->
+<a href="https://flatironschool.com">Flatiron School</a>
+
+<!-- More of your HTML content if needed -->
+
+</body>
+</html>
